# omv

./: Cargo.toml
bytecode-verifier/: Cargo.toml
bytecode-verifier/src/: absint.rs  acquires_list_verifier.rs  binary_views.rs  check_duplication.rs  code_unit_verifier.rs  constants.rs  control_flow.rs  control_flow_graph.rs  cyclic_dependencies.rs  dependencies.rs  instantiation_loops.rs  instruction_consistency.rs  lib.rs  resources.rs  script_signature.rs  signature.rs  stack_usage_verifier.rs  struct_defs.rs  type_safety.rs  verifier.rs
bytecode-verifier/src/locals_safety/: abstract_state.rs  mod.rs
bytecode-verifier/src/reference_safety/: abstract_state.rs  mod.rs
common/: Cargo.toml
common/src/types/: access_path.rs  language_storage.rs  move_resource.rs  transaction_argument.rs  value.rs  vm_status.rs
core/: Cargo.toml
core/src/: access.rs  check_bounds.rs  constant.rs  deserializer.rs  errors.rs  file_format.rs  file_format_common.rs  lib.rs  normalized.rs  serializer.rs  views.rs
io/: Cargo.toml
io/src/: lib.rs
natives/: Cargo.toml
natives/src/: account.rs  bcs.rs  debug.rs  event.rs  hash.rs  lib.rs  signature.rs  signer.rs  vector.rs
primitives/: Cargo.toml
primitives/src/: access_path.rs  account_address.rs  effects.rs  gas_schedule.rs  hash_value.rs  identifier.rs  language_storage.rs  lib.rs  move_resource.rs  parser.rs  transaction_argument.rs  value.rs  vm_status.rs
runtime/: Cargo.toml
runtime/src/: data_cache.rs  interpreter.rs  lib.rs  loader.rs  logging.rs  move_vm.rs  native_functions.rs  runtime.rs  session.rs
serialize/: Cargo.toml
serialize/src/: de.rs  error.rs  lib.rs  ser.rs
src/: lib.rs
types/: Cargo.toml
types/src/: data_store.rs  gas_schedule.rs  lib.rs
types/src/loaded_data/: runtime_types.rs
types/src/natives/: function.rs
types/src/values/: mod.rs  values_impl.rs
utils/borrow-graph/: Cargo.toml
utils/borrow-graph/src/: graph.rs  lib.rs  paths.rs  references.rs  shared.rs
vm/: Cargo.toml
vm/bytecode-verifier/: Cargo.toml
vm/bytecode-verifier/src/: acquires_list_verifier.rs  binary_views.rs  check_duplication.rs  constants.rs  control_flow.rs  control_flow_graph.rs  cyclic_dependencies.rs  dependencies.rs  instantiation_loops.rs  instruction_consistency.rs  resources.rs  script_signature.rs  signature.rs  stack_usage_verifier.rs  struct_defs.rs  type_safety.rs
vm/bytecode-verifier/src/locals_safety/: abstract_state.rs  mod.rs
vm/bytecode-verifier/src/reference_safety/: abstract_state.rs  mod.rs
vm/core/: Cargo.toml
vm/core/src/: access.rs  check_bounds.rs  constant.rs  deserializer.rs  errors.rs  file_format.rs  file_format_common.rs  normalized.rs  serializer.rs  views.rs
vm/natives/: Cargo.toml
vm/natives/src/: account.rs  bcs.rs  debug.rs  event.rs  lib.rs  vector.rs
vm/runtime/: Cargo.toml
vm/runtime/src/: data_cache.rs  interpreter.rs  lib.rs  loader.rs  logging.rs  native_functions.rs  runtime.rs  session.rs
vm/src/: lib.rs
vm/types/: Cargo.toml
vm/types/src/: data_store.rs  gas_schedule.rs
vm/types/src/loaded_data/: runtime_types.rs
vm/types/src/natives/: function.rs
vm/types/src/values/: values_impl.rs
