[package]
name = "omv"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "The virtual machine for Outmove."
license = "Apache-2.0"

[dependencies]
omv-core = { version = "0.1.0", path = "core" }
omv-types = { version = "0.1.0", path = "types" }
omv-natives = { version = "0.1.0", path = "natives" }
omv-bytecode-verifier = { version = "0.1.0", path = "bytecode-verifier" }
omv-runtime = { version = "0.1.0", path = "runtime" }

[workspace]
members = [
    "core",
    "natives",
    "types",
    "bytecode-verifier",
    "primitives",
    "utils/borrow-graph",
]