[package]
name = "omv"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "The virtual machine for Outmove."
license = "Apache-2.0"

[dependencies]
omv-core = { version = "0.1.0", path = "core", default-features = false }
omv-types = { version = "0.1.0", path = "types", default-features = false }
omv-natives = { version = "0.1.0", path = "natives", default-features = false }
omv-bytecode-verifier = { version = "0.1.0", path = "bytecode-verifier", default-features = false }
omv-runtime = { version = "0.1.0", path = "runtime", default-features = false }
omv-serialize = { version = "0.1.0", path = "serialize", default-features = false }
omv-primitives = { version = "0.1.0", path = "primitives", default-features = false }

[features]
default = ["std"]
std = [
    "omv-core/std",
    "omv-types/std",
    "omv-natives/std",
    "omv-bytecode-verifier/std",
    "omv-runtime/std",
    "omv-serialize/std",
    "omv-primitives/std",
]

[workspace]
members = [
    "core",
    "natives",
    "types",
    "serialize",
    "bytecode-verifier",
    "primitives",
    "utils/borrow-graph",
]