[package]
name = "omv-bytecode-verifier"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0.38"
mirai-annotations = "1.10.1"
petgraph = "0.5.1"

borrow-graph = { path = "../utils/borrow-graph", version = "0.0.1" }
omv-core = { path = "../core", version = "0.1.0" }
omv-primitives = { path = "../primitives", version = "0.1.0" }