[package]
name = "omv-core"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.38", default-features = false }
mirai-annotations = { version = "1.10.1", optional = true }
ref-cast = "1.0.6"
omv-primitives = { version = "0.1.0", path = "../primitives", default-features = false }
omv-io = { version = "0.1.0", path = "../io", default-features = false }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "mirai-annotations",
    "omv-primitives/std",
    "omv-io/std",
]