[package]
name = "omv-natives"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
once_cell = { version = "1.4.1", default-features = false }
mirai-annotations = { version = "1.10.1", optional = true }
sha2 = { version = "0.9.3", default-features = false }
smallvec = { version = "1.6.1" }

omv-primitives = { version = "0.1.0", path = "../primitives", default-features = false }
omv-core = { version = "0.1.0", path = "../core", default-features = false }
omv-types = { version = "0.1.0", path = "../types", default-features = false }

[features]
default = ["std"]
std = [
    "once_cell/std",
    "mirai-annotations",
    "sha2/std",
    "omv-primitives/std",
    "omv-core/std",
    "omv-types/std",
]
debug_module = []