[package]
name = "omv-primitives"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "Common types for outmove."
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.38"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.5"
hex = "0.4.2"
ref-cast = "1.0.6"
mirai-annotations = "1.10.1"
bcs = "0.1.2"
once_cell = "1.4.1"
primitive-types = "0.9.0"