[package]
name = "omv-primitives"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
edition = "2018"
description = "Common types for outmove."
license = "Apache-2.0"

[dependencies]
anyhow = { version = "1.0.38", default-features = false }
rand = { version = "0.8.3", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_bytes = { version = "0.11.5", features = ["alloc"], default-features = false }
hex = { version = "0.4.2", default-features = false }
ref-cast = "1.0.6"
mirai-annotations = { version = "1.10.1", optional = true }
bcs = { package = "omv-serialize", version = "0.1.2", path = "../serialize" }
primitive-types = { version = "0.9.0", default-features = false }

[features]
default = ["std"]
std = [
    "anyhow/std",
    "rand/std",
    "serde/std",
    "serde_bytes/std",
    "hex/std",
    "mirai-annotations",
    "bcs/std",
    "primitive-types/std",
]