[package]
name = "omv-runtime"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
fail = "0.4.0"
mirai-annotations = "1.10.1"
once_cell = "1.4.1"
primitive-types = "0.9.0"
funty = "=1.1.0"

omv-primitives = { version = "0.1.0", path = "../primitives" }
omv-bytecode-verifier = { path = "../bytecode-verifier", version = "0.1.0" }
omv-natives = { path = "../natives", version = "0.1.0" }
omv-types = { path = "../types", version = "0.1.0" }
omv-core = { path = "../core", version = "0.1.0" }
log = "0.4"
parking_lot = "0.11"
sha3 = "0.9"

[features]
default = []
debug_module = ["omv-natives/debug_module"]
failpoints = ["fail/failpoints"]
