[package]
name = "omv-runtime"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
fail = { version = "0.4.0", optional = true }
mirai-annotations = { version = "1.10.1", optional = true }
once_cell = { version = "1.4.1", default-features = false }
funty = { version = "=1.1.0" }

omv-primitives = { version = "0.1.0", path = "../primitives", default-features = false }
omv-bytecode-verifier = { path = "../bytecode-verifier", version = "0.1.0", default-features = false }
omv-natives = { path = "../natives", version = "0.1.0", default-features = false }
omv-types = { path = "../types", version = "0.1.0", default-features = false }
omv-core = { path = "../core", version = "0.1.0", default-features = false }
log = { version = "0.4", default-features = false }
sha3 = { version = "0.9", default-features = false }

[features]
default = ["std"]
std = [
    "fail",
    "mirai-annotations",
    "once_cell/std",
    "omv-primitives/std",
    "omv-bytecode-verifier/std",
    "omv-natives/std",
    "omv-types/std",
    "omv-core/std",
    "log/std",
    "sha3/std",
]
debug_module = ["omv-natives/debug_module"]
failpoints = ["fail/failpoints"]
