[package]
name = "omv-serialize"
version = "0.1.2"
authors = ["Diem <opensource@diem.com>"]
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/diem/bcs"
homepage = "https://diem.com"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.117", features = ["derive"], default-features = false }

[dev-dependencies]
criterion = "0.3.3"
proptest = "0.10.1"
proptest-derive = "0.2.0"

[[bench]]
name = "bcs_bench"
harness = false

[features]
default = ["std"]
std = [
    "serde/std",
]