[package]
name = "omv-serialize"
version = "0.1.2"
authors = ["Diem <opensource@diem.com>"]
description = "Binary Canonical Serialization (BCS)"
repository = "https://github.com/diem/bcs"
homepage = "https://diem.com"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.117", features = ["derive", "alloc"], default-features = false }
omv-io = { version = "0.1.0", path = "../io", default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "omv-io/std",
]