[package]
name = "omv-types"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
mirai-annotations = "1.10.1"
once_cell = "1.4.1"
sha2 = "0.9.3"
serde = { version = "1.0.123", features = ["derive", "rc"] }
smallvec = "1.6.1"

bcs = "0.1.2"
omv-primitives = { version = "0.1.0", path = "../primitives" }
omv-core = { path = "../core", version = "0.1.0" }
