[package]
name = "borrow-graph"
version = "0.0.1"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"
description = "Borrow graph for outmove."

[dependencies]
mirai-annotations = { version = "1.10.1", optional = true }

[features]
default = ["std"]
std = [
    "mirai-annotations",
]
