[package]
name = "omv-natives"
version = "0.1.0"
authors = ["Wei Tang <wei@that.world>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
once_cell = "1.4.1"
mirai-annotations = "1.10.1"
sha2 = "0.9.3"
smallvec = "1.6.1"

common = { package = "outmove-common", version = "0.1", path = "../../common" }
omv-core = { version = "0.1.0", path = "../core" }
omv-types = { version = "0.1.0", path = "../types" }

[features]
default = []
debug_module = []